--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "path": "^0.12.7"
   },
   "name": "api",
   "version": "1.0.0",
